Resource nodes map view

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>GW2Timer - World Boss Timers and Daily Map Guide for Guild Wars 2</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
-	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events and daily achievement guide. Provides detailed prediction and map walkthrough of events along with customizable checklist and Text-to-Speech alarm." />
+	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs and daily achievement guide." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 
 	<!-- Stylesheets -->
@@ -160,6 +160,7 @@
 		==================================================================== -->
 		<section id="paneContent" class="paneRight">
 			<div id="jsTop">&uarr;</div>
+			<div id="jsCenter" title="Default map view"></div>
 			<article id="layerChains"> <!-- This layer will be populated by JS -->
 				<header>
 					<img src="img/ui/scheduled.png" alt="Scheduled Bosses" />
