--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 		<!-- Menu, if these IDs were changed, change the <article> tags' too
 		==================================================================== -->
 		<nav id="paneMenu" class="paneRight">
-			<div id="menuChains" title="Chains List"></div>
-			<div id="menuMap" title="Map and Dailies"></div>
-			<div id="menuHelp" title="Help and Guides"></div>
-			<div id="menuOptions" title="Options"></div>
+			<span id="menuChains" title="&lt;span class='cssGold'&gt;Chains:&lt;/span&gt; Timers, Events, Checklist"></span>
+			<span id="menuMap" title="&lt;span class='cssGold'&gt;Map:&lt;/span&gt; Gathering Nodes, Dailies, JPs"></span>
+			<span id="menuHelp" title="&lt;span class='cssGold'&gt;Help:&lt;/span&gt; FAQs, About, Walkthrough"></span>
+			<span id="menuOptions" title="&lt;span class='cssGold'&gt;Options:&lt;/span&gt; Timer, Map, Alarm"></span>
 		</nav>
 		<!-- Content mini-pane
 		==================================================================== -->
