--- a/map.html
+++ b/map.html
@@ -304,7 +304,7 @@ var GW2T_RESOURCES_DATA = {
 	</div>
 </div>
 
-<header class="jsCollapsible"><img src="img/ui/node_metal.png" alt="Resource Nodes" />Resource Nodes</header>
+<header class="jsCollapsible" id="mapResourceHeader"><img src="img/ui/node_metal.png" alt="Resource Nodes" />Resource Nodes</header>
 <div>
 <div style="width:100%;height:32px"><button id="btnNodesToggle" class="cssRight">Toggle All</button></div>
 <div class="mapResourceList">
@@ -312,10 +312,10 @@ var GW2T_RESOURCES_DATA = {
 	<div id="mapResource_Plant"></div>
 	<div id="mapResource_Wood"></div>
 </div>
-Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any nodes.<br />
 <div id="mapLegendSolid" class="mapLegendLine"></div> <strong>Exact</strong> location of that node<br />
 <div id="mapLegendDotted" class="mapLegendLine"></div> <strong>Approximate</strong> vicinity of that node<br />
 <div id="mapLegendDashed" class="mapLegendLine"></div> <strong>Map</strong> has that resource (not a node)<br />
+Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki.<br />
 <br />
 </div>
 
@@ -385,9 +385,9 @@ You may need to complete the heart before you can purchase.
 </div>
 
 
-<header class="jsCollapsible"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
+<header class="jsCollapsible" id="mapJPHeader"><img src="img/ui/jp.png" alt="Jumping Puzzles" />Jumping Puzzles</header>
 <div>
-<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. The descriptions are just to remind you of which JP it is.</p>
+<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. The descriptions are to remind you of which JP it is. The checklist is saved automatically.</p>
 <button id="btnJPsUncheck">Uncheck All</button>
 
 <h2>Easy</h2>
